# x-ai-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: .env.example  setup.sh  x-ai-mcp.service
scripts/: auth_flow.py  daily_digest.py
src/: config.py  cookie_client.py  e2e_crypto.py  formatters.py  grok_client.py  server.py  thrift_decoder.py  x_client.py
