[project]
name = "x-ai-mcp"
version = "0.1.0"
description = "X (Twitter) MCP server + Grok-powered intelligence agent"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-ai-slim[xai,logfire]>=0.1.0",
    "logfire>=0.40.0",
]

[project.scripts]
x-ai-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
